[package]
name = "where-is-the-601"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
reqwest = "0.11.18"
bytes = "1.4.0"
prost = "0.11.9"
termcolor_output = "1.0.1"
termcolor = "1.2.0"

[build-dependencies]
prost-build = "0.11.9"
